--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body class="font-inter">
     <header>
-
+        <nav class="navbar flex">
+            <h3 class="brand">Tech<span class="wave">Wave</span></h3>
+            <ul class="nav-link flex">
+                <li class="nav-item"><a href="">About</a></li>
+                <li class="nav-item"><a href="">Episodes</a></li>
+                <li class="nav-item"><a href="">Host</a></li>
+            </ul>
+            <button class="btw flex">Subscribe <img src="./images/ArrowRight.png" alt=""></button>
+        </nav>
     </header>
     <main>
 
