--- a/index.html
+++ b/index.html
@@ -10,16 +10,31 @@
 <body class="font-inter">
     <header>
         <nav class="navbar flex">
-            <h3 class="brand">Tech<span class="wave">Wave</span></h3>
+            <div><img src="./images/TechWave.png" alt=""></div>
             <ul class="nav-link flex">
-                <li class="nav-item"><a href="">About</a></li>
-                <li class="nav-item"><a href="">Episodes</a></li>
-                <li class="nav-item"><a href="">Host</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
             </ul>
             <button class="btw flex">Subscribe <img src="./images/ArrowRight.png" alt=""></button>
         </nav>
+        <hr>
     </header>
     <main>
+        <section class="banner flex">
+            <div class="banner-container">
+                <div><img src="./images/microphone.png" alt=""></div>
+                <div class="banner-text">
+                    <h2>TechWave</h2>
+                    <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+                    <div>
+                        <button>Listen on Spotify</button>
+                        <button>Subscribe</button>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
