designed banner section

--- a/index.html
+++ b/index.html
@@ -23,12 +23,15 @@
     <main>
         <section class="banner flex">
             <div class="banner-container">
-                <div><img src="./images/microphone.png" alt=""></div>
+                <div class="hero-img ">
+                    <img src="./images/hero-circle.png" alt="">
+                    <!-- <img src="./images/microphone.png" alt=""> -->
+                </div>
                 <div class="banner-text">
                     <h2>TechWave</h2>
                     <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
-                    <div>
-                        <button>Listen on Spotify</button>
+                    <div class="banner-btw flex">
+                        <button class="btw">Listen on Spotify</button>
                         <button>Subscribe</button>
                     </div>
                 </div>
