--- a/index.html
+++ b/index.html
@@ -19,22 +19,40 @@
             <button class="btw flex">Subscribe <img src="./images/ArrowRight.png" alt=""></button>
         </nav>
         <hr>
-    </header>
-    <main>
         <section class="banner flex">
             <div class="banner-container">
                 <div class="hero-img ">
                     <img src="./images/hero-circle.png" alt="">
-                    <!-- <img src="./images/microphone.png" alt=""> -->
+                    <img src="./images/microphone.png" alt="" class="microphone">
+                    <span class="new-btw">NEW</span>
                 </div>
                 <div class="banner-text">
                     <h2>TechWave</h2>
                     <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
                     <div class="banner-btw flex">
-                        <button class="btw">Listen on Spotify</button>
-                        <button>Subscribe</button>
+                        <button class="btw flex"><img src="./images/spotify.png" alt="">Listen on Spotify</button>
+                        <button class="btw-2 flex"><img src="./images/message.png" alt="">Subscribe</button>
                     </div>
                 </div>
+            </div>
+
+        </section>
+    </header>
+    <main>
+        <section class="about-container">
+            <div>
+                <h2>About the Podcast</h2>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                We break down complex topics into digestible insights, explore productivity strategies that actually work,
+                and share stories of personal growth from industry leader</p>
+                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+            </div>
+            <hr>
+            <div>
+                <div>
+                    <h2>150K+</h2>
+                </div>
+                <p>Monthly Listeners</p>
             </div>
 
         </section>
