completed why choose section

--- a/index.html
+++ b/index.html
@@ -40,21 +40,66 @@
     </header>
     <main>
         <section class="about-container">
-            <div>
+            <div class="about-text">
                 <h2>About the Podcast</h2>
-                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
-                We break down complex topics into digestible insights, explore productivity strategies that actually work,
-                and share stories of personal growth from industry leader</p>
-                <p>Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>
+                We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>
+                and share stories of personal growth from industry leader<br><br>
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
             <hr>
-            <div>
-                <div>
+            <div class="merit-comtent flex">
+                <div class="merits">
                     <h2>150K+</h2>
+                    <p>MONTHLY LISTENERS</p>
                 </div>
-                <p>Monthly Listeners</p>
+                <div class="merits">
+                    <h2>200+</h2>
+                    <p>EPiSODES PUBLISHED</p>
+                </div>
+                <div class="merits">
+                    <h2>4.9★</h2>
+                    <p>AVERAGE RATING</p>
+                </div>
+                <div class="merits">
+                    <h2>50+</h2>
+                    <p>INDUSTRY EXPERTS</p>
+                </div>
+
             </div>
 
+        </section>
+        <section class="why-choose">
+            <h2>Why Choose TechWave</h2>
+            <div class="card-container">
+                <div class="why-choose-card audeo">
+                    <img src="./images/headphone.png" alt="">
+                    <h3>Premium Audio Quality</h3>
+                    <p>Experience crystal-clear sound with professional-grade recording <br>equipment and expert audio <br>engineering.
+                       Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="why-choose-card mobile">
+                    <img src="./images/device.png" alt="">
+                    <h3>Mobile Friendly</h3>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="why-choose-card community">
+                    <img src="./images/location.png" alt="">
+                    <h3>Global Community community</h3>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="why-choose-card interviews">
+                    <img src="./images/Icon (Stroke).png" alt="">
+                    <h3>Exclusive Interviews</h3>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries.
+                     Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="why-choose-card">
+                    <img src="./images/resource.png" alt="">
+                    <h3>Rich Resources</h3>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
         </section>
 
     </main>
