--- a/index.html
+++ b/index.html
@@ -101,6 +101,74 @@
                 </div>
             </div>
         </section>
+        <section class="card-host">
+            <div class="featured-container">
+                <h2>Featured Episodes</h2>
+                <div class="video-card-container flex">
+                    <div class="featured-card">
+                        <iframe src="https://www.youtube.com/embed/LWiM-LuRe6w?si=crlFI5_Qv0t3u6UW" 
+                         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                         referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                         <div class="card-text">
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines
+                              and what to expect in the next decade.</p>
+                            <div class="video-time flex">
+                                <img src="./images/clock.png" alt="">
+                                <span>42min</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="featured-card">
+                        <iframe src="https://www.youtube.com/embed/9E2SdLD3Kpc?si=vGaUobyQy4zWxpV7" title="YouTube video player" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                         <div class="card-text">
+                            <h3>Building Better Habits for Remote Work</h3>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="video-time flex">
+                                <img src="./images/clock.png" alt="">
+                                <span>5min</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="featured-card">
+                        <iframe src="https://www.youtube.com/embed/w4rG5GY9IlA?si=4xA2jdvRAc4W8p1x" title="YouTube video player" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                         <div class="card-text">
+                            <h3>Career Growth in Tech: A Roadmap</h3>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="video-time flex">
+                                <img src="./images/clock.png" alt="">
+                                <span>13min</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>  
+            </div>
+            <div class="host-container">
+                <h2>Meet the Host</h2>
+                <div class="host">
+                    <img src="./images/host.png" alt="">
+                    <div class="host-info">
+                        <h3>Alex Kumar</h3>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,
+                            working with startups and Fortune 500 companies. Through TechWave,
+                            Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
+                        </p>
+                        <div host-icon>
+                            <img src="./images/linkedin.png" alt="">
+                            <img src="./images/x.png" alt="">
+                            <img src="./images/instagram.png" alt="">
+                            <img src="./images/youtube.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
