--- a/index.html
+++ b/index.html
@@ -150,28 +150,27 @@
             </div>
             <div class="host-container">
                 <h2>Meet the Host</h2>
-                <div class="host">
+                <div class="host flex">
                     <img src="./images/host.png" alt="">
                     <div class="host-info">
                         <h3>Alex Kumar</h3>
-                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years,<br>
                             working with startups and Fortune 500 companies. Through TechWave,
                             Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
                         </p>
-                        <div host-icon>
-                            <img src="./images/linkedin.png" alt="">
-                            <img src="./images/x.png" alt="">
-                            <img src="./images/instagram.png" alt="">
-                            <img src="./images/youtube.png" alt="">
+                        <div class="host-icon flex">
+                            <div class="icon-circle"><img src="./images/linkedin.png" alt=""></div>
+                            <div class="icon-circle"><img src="./images/x.png" alt=""></div>
+                            <div class="icon-circle"><img src="./images/instagram.png" alt=""></div>
+                            <div class="icon-circle"><img src="./images/youtube.png" alt=""></div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </section>
-
     </main>
     <footer>
+        
 
     </footer>
 </body>
