--- a/index.html
+++ b/index.html
@@ -169,8 +169,17 @@
             </div>
         </section>
     </main>
-    <footer>
-        
+    <footer class="flex">
+        <div class="footer-container">
+            <img src="./images/footer TechWave.png" alt="">
+            <div class="footer-content flex">
+                <div class="footer-icon"><img src="./images/spotify.png" alt=""><span>Spotify</span></div>
+                <div class="footer-icon"><img src="./images/apple-podcast.png" alt=""><span>Apple Podcasts</span></div>
+                <div class="footer-icon"><img src="./images/youtube-podcast.png" alt=""><span>YouTube</span></div>
+                <div class="footer-icon"><img src="./images/twitter.png" alt=""><span>Twitter</span></div>
+            </div>
+            <p>© 2026 TechWave Podcast. All rights reserved.</p>
+        </div>
 
     </footer>
 </body>
