completed responsive style

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="">Host</a></li>
             </ul>
             <button class="btw flex">Subscribe <img src="./images/ArrowRight.png" alt=""></button>
+            <div class="menu"><img src="./images/hamburger-menu.png" alt=""></div>
         </nav>
         <hr>
         <section class="banner flex">
@@ -75,7 +76,7 @@
                 <div class="why-choose-card audeo">
                     <img src="./images/headphone.png" alt="">
                     <h3>Premium Audio Quality</h3>
-                    <p>Experience crystal-clear sound with professional-grade recording <br>equipment and expert audio <br>engineering.
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering.
                        Every episode is mastered for optimal listening across all devices and platforms.</p>
                 </div>
                 <div class="why-choose-card mobile">
@@ -171,7 +172,7 @@
     </main>
     <footer class="flex">
         <div class="footer-container">
-            <img src="./images/footer TechWave.png" alt="">
+            <img src="./images/footer TechWave.png" alt="" class="footer-techwave">
             <div class="footer-content flex">
                 <div class="footer-icon"><img src="./images/spotify.png" alt=""><span>Spotify</span></div>
                 <div class="footer-icon"><img src="./images/apple-podcast.png" alt=""><span>Apple Podcasts</span></div>
@@ -180,7 +181,6 @@
             </div>
             <p>© 2026 TechWave Podcast. All rights reserved.</p>
         </div>
-
     </footer>
 </body>
 </html>
