debbuged a scroll on banner & footer and added hlinks

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                             Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.
                         </p>
                         <div class="host-icon flex">
-                            <div class="icon-circle"><img src="./images/linkedin.png" alt=""></div>
-                            <div class="icon-circle"><img src="./images/x.png" alt=""></div>
-                            <div class="icon-circle"><img src="./images/instagram.png" alt=""></div>
-                            <div class="icon-circle"><img src="./images/youtube.png" alt=""></div>
+                            <div class="icon-circle"><a href="https://www.linkedin.com/"><img src="./images/linkedin.png" alt=""></a></div>
+                            <div class="icon-circle"><a href="https://x.com/"><img src="./images/x.png" alt=""></a></div>
+                            <div class="icon-circle"><a href="https://www.instagram.com/"><img src="./images/instagram.png" alt=""></a></div>
+                            <div class="icon-circle"><a href="https://www.youtube.com/"><img src="./images/youtube.png" alt=""></a></div>
                         </div>
                     </div>
                 </div>
@@ -174,10 +174,10 @@
         <div class="footer-container">
             <img src="./images/footer TechWave.png" alt="" class="footer-techwave">
             <div class="footer-content flex">
-                <div class="footer-icon"><img src="./images/spotify.png" alt=""><span>Spotify</span></div>
-                <div class="footer-icon"><img src="./images/apple-podcast.png" alt=""><span>Apple Podcasts</span></div>
-                <div class="footer-icon"><img src="./images/youtube-podcast.png" alt=""><span>YouTube</span></div>
-                <div class="footer-icon"><img src="./images/twitter.png" alt=""><span>Twitter</span></div>
+                <div class="footer-icon"><img src="./images/spotify.png" alt=""><span><a href="https://open.spotify.com/">Spotify</a></span></div>
+                <div class="footer-icon"><img src="./images/apple-podcast.png" alt=""><span><a href="https://podcasts.apple.com/us/new">Apple Podcasts</a></span></div>
+                <div class="footer-icon"><img src="./images/youtube-podcast.png" alt=""><span><a href="https://www.youtube.com/">YouTube</a></span></div>
+                <div class="footer-icon"><img src="./images/twitter.png" alt=""><span><a href="https://x.com/">Twitter</a></span></div>
             </div>
             <p>© 2026 TechWave Podcast. All rights reserved.</p>
         </div>
